# supper-decoyable

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMANDS_VERIFICATION.md  COMMUNITY.md  CONTRIBUTING.md  LICENSE  LICENSE.checklist  MANIFEST.in  README.md  RELEASES.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  bandit-report.json  command.txt  comprehensive_self_test.sh  coverage.xml  debug_patterns.py  decoyable.db  decoyable_knowledge.db  defense-bandit-report.json  demo.py  dependency_links.txt  docker-compose.yml  generate_ssl.py  linux_kernel_stress_test.py  main.py  nuclear_generator.py  pyproject.toml  pytest.ini  requirements.txt  run_full_check.sh  scan_results.json  test_api.py  test_pydantic.py  test_system.py  (+1 more)
.github/: FUNDING.yml  pull_request_template.md
.pytest_cache/: .gitignore
decoyable/: __init__.py  __main__.py  cache.py  database.py  tasks.py
decoyable-1.0.2/: CHANGELOG.md  COMMUNITY.md  PKG-INFO  ROADMAP.md  demo.py  generate_ssl.py  pytest.ini
decoyable.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
decoyable_oss.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docker/: Dockerfile
docs/: ARCHITECTURE.md  USER_GUIDES.md
nginx/: nginx.conf
prometheus/: prometheus.yml
secrets/: postgres_password.txt  redis_password.txt
tests/: defense_tests.py  test_analysis.py  test_api.py  test_cli.py  test_decoyable.py  test_deps.py  test_honeypot.py  test_scanners.py  test_secrets.py  test_services.py  test_streaming.py
(+156 files in other folders)
